--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "add": "^2.0.6",
+    "axios": "^0.21.1",
+    "gotrue-js": "^0.9.29",
+    "idb": "^6.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
