--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "idb": "^6.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
